<?php

namespace App\Models\Models\Veterinaria;

use Illuminate\Database\Eloquent\Model;

class ExamenLaboratorio extends Model
{
    //
}
