<?php

namespace App\Models\Models\Veterinaria;

use Illuminate\Database\Eloquent\Model;

class ProductoFarmaceutico extends Model
{
    //
}
