<?php

namespace App\Models\Models\Veterinaria;

use Illuminate\Database\Eloquent\Model;

class TipoVacuna extends Model
{
    //
}
